minor adjustments to text input field, fixed button alignment for lists

--- a/styles/_masthead.scss
+++ b/styles/_masthead.scss
@@ -12,6 +12,7 @@ header.masthead {
   #new-item-form {
     #item-input-field {
       background-image: url(../img/notepad_lines.png);
+      padding-left: 4em;
       width: 30em;
       height: 10em;
       word-wrap: break-word; 
